[package]
name = "actix-covid19"
version = "0.1.0"
authors = ["Saravuth Ruangsutham"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"

