[package]
name = "actix-covid19"
version = "0.1.0"
authors = ["Saravuth Ruangsutham"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix-web-httpauth = "0.5.1"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"
color-eyre = "0.5.7"
eyre = "0.6.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
blake2 = "0.9"
mongodb = "1.1.1"
bson = "1.2.0"
config = "0.11.0"